- add endpoints viewing and importing mappings
